--- a/church/index.html
+++ b/church/index.html
@@ -72,11 +72,17 @@
                     <button class="join"><a href="register.html">join</a></button>
                 </div>
                 <div class="hide-mobile">
-                    <div class="flag"></div>
-                    <img src="./image/image-3.jpg" alt="church image">
+                    <div class="image">
+                        <img src="./image/image-3.jpg" alt="church image">
+                    </div>
                 </div>
             </section>
-            <section class="mid">
+            <section class="mid">                
+                <div class="hide-mobile">
+                    <div class="image">
+                        <img src="./image/image-1.jpg" alt="church image">
+                    </div>
+                </div>
                 <div class="mid-text">
                     <p>The experience</p>
                     <p>
@@ -98,7 +104,6 @@
                 </div>
             </section>
             <section class="bottom">
-                <div class="img hide"></div>
                 <div class="details">
                     <ul>
                         <li>
@@ -118,14 +123,19 @@
                             <p>33, Oremeji Street, Off Ososami, Oke Ado, Ibadan Oyo State.</p>
                         </li>
                     </ul>
-                </div>
+                </div>                
+                <div class="hide-mobile">
+                        <div class="image">
+                            <img src="./image/image-6.jpg" alt="church image">
+                        </div>
+                    </div>
             </section>
         </main>
-           <footer>
-                <p title="email">info@churchpilgrimage.com</p>
-                <!-- <p><img src="./image/logo.svg" alt="church-logo"></p> -->
-                <p><button class="join"><a href="/register.html">join</a></button></p>
-            </footer>
+        <footer>
+            <p title="email">info@churchpilgrimage.com</p>
+            <!-- <p><img src="./image/logo.svg" alt="church-logo"></p> -->
+            <p><button class="join"><a href="/register.html">join</a></button></p>
+        </footer>
     </div>    
     <script src="/index.js"></script>
 </body>
